[package]
name = "display-initial"
version = "0.1.0"
authors = ["n01e0 <noleo@vanillabeans.mobi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.33", features = ["full", "extra-traits"]}
quote = "1.0.7"
